FIX: CSS for demi points sometime unreadable

--- a/css/cage.css
+++ b/css/cage.css
@@ -217,7 +217,6 @@
 #cageFavouriteGenerals > div > img:last-of-type {
 	position: relative;
 	margin-left: -12px;
-	left: -3px;
 	bottom: 3px;
 	width: 12px;
 	cursor: pointer;
@@ -447,11 +446,17 @@
 #cageDemiContainer span {
 	display: block;
 	position: relative;
-	left: 10px;
-	top: 54px;
+	left: 13px;
+	top: 56px;
 	font-size: 12px;
 	font-weight: bold;
-	text-shadow: #000 0 0 5px;
+	color: white;
+	background-color: black;
+	width: 60px;
+	opacity: 0.8;
+	border-bottom-right-radius: 10px;
+	padding: 2px;
+	border-top-left-radius: 10px;
 }
 .cageDemiResult {
 	font-size: 12px;
